Bug 109388 - UI: No mouseover effect for the different palettes in the Area tab
Summary: UI: No mouseover effect for the different palettes in the Area tab
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha1+
Hardware: All All
: medium trivial
Assignee: Bayram Çiçek
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks: Area-Fill-Tab Button-Controls
  Show dependency treegraph
 
Reported: 2017-07-26 17:27 UTC by Telesto
Modified: 2021-09-16 06:38 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screencast (501.03 KB, video/mp4)
2019-03-03 13:22 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2017-07-26 17:27:52 UTC
Description:
When hoovering in the (font) color picker in the toolbar a visual indication is giving which color is selected. Similar behavior doesn't exist in the Area Tab

Steps to Reproduce:
1. Open Writer
2. Format -> Page -> Area tab -> Color button
3. Hoover over the palette. No mouse over effect

Actual Results:  
No mouse-over effect

Expected Results:
A mouse-over effect, similar to the toolbar palette


Reproducible: Always

User Profile Reset: No

Additional Info:
Version: 6.0.0.0.alpha0+
Build ID: 343d40206a929969e1755b073edae91cc4bd9751
CPU threads: 4; OS: Windows 6.19; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-07-26_05:51:20
Locale: nl-NL (nl_NL); Calc: CL


User-Agent: Mozilla/5.0 (Windows NT 6.2; WOW64; rv:52.0) Gecko/20100101 Firefox/52.0
Comment 1 Xisco Faulí 2017-07-27 08:49:59 UTC
Confirmed in

Version: 6.0.0.0.alpha0+
Build ID: e0b6a4a2d2dec4e9614f27fc03f84b1c578028ec
CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

and

Version: 5.3.0.0.alpha1+
Build ID: 4136757b4e51c4e6f7cb4132c95538a7f831ef2c
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk3; Layout Engine: new; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 2 QA Administrators 2018-07-28 02:43:12 UTC Comment hidden (obsolete)
Comment 3 Telesto 2018-07-30 11:49:40 UTC
Repro
Version: 6.2.0.0.alpha0+
Build ID: fa881095bc62c3646406c82a98d8503377288a54
CPU threads: 4; OS: Windows 6.3; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-07-22_03:27:00
Locale: nl-NL (nl_NL); Calc: CL
Comment 4 Jim Raykowski 2019-03-03 10:44:29 UTC
No Repro using VCL: gtk2 tested in current master back to version 5.4

No Repro using VCL: win Version 6.3.0.0.alpha0+ (x64) and Version 6.2.0.2 (x64)

Repro all versions using VCL: gtk3
Comment 5 Telesto 2019-03-03 13:22:57 UTC
Created attachment 149694 [details]
Screencast

It's about the square around the color.. I do repro it in:
Version: 6.3.0.0.alpha0+
Build ID: aa51774e6a309f277e71ca3a3b9d5d5b4b3dbf1a
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-02-18_06:06:03
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL
Comment 6 Thomas Lendo QA 2020-08-13 20:50:52 UTC
This is also true for gradients, bitmaps, patterns and hashes.
Comment 7 Commit Notification 2021-06-08 18:50:41 UTC
Bayram Çiçek committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fae6f9fc498e1ac258844ee2712888710d530d0f

tdf#109388: Mouseover effect added to palettes in the Area tab

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Rober James 2021-07-28 05:37:22 UTC Comment hidden (spam)
Comment 9 Mehmet gelisin 2021-09-11 13:04:11 UTC Comment hidden (spam)
Comment 10 Joana Davidson 2021-09-16 05:17:35 UTC Comment hidden (spam)