tdf#109388: Mouseover effect added to palettes in the Area tab

In 'Format > Page Style... > Area' Tab,
Mouseover effect added to the palettes on Color, Gradient,
Bitmap, Pattern and Hatch sections.

Change-Id: Idf036adc01b6b2ef6d62d2dd670ed6fb432bfbf9